# zed-gregorio

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm  flake.nix  highlights_out.txt  inspect_highlights.py  kyrie.gabc  kyrie_highlight.html  nabc.gabc
.github/: dependabot.yml
.github/workflows/: ci.yml
grammars/: gregorio.wasm
keymaps/: default.json
languages/gabc/: config.toml  highlights.scm  indents.scm  injections.scm  outline.scm
src/: lib.rs
