[package]
name = "zed-gregorio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zed extension for Gregorio GABC/NABC Gregorian chant notation"

[lib]
crate-type = ["cdylib"]

[profile.dev]
incremental = false

[profile.release]
incremental = false

[dependencies]
zed_extension_api = "0.7.0"
